# wallppib

./: .gitattributes  .gitignore  CMakeLists.txt  readme.md  snapcraft.yaml  toolchain-mingw32.cmake
include/common/: window_size.h
include/core/: wallpaper_manager.h
include/domain/: image_info.h
include/images/: ImageManager.h
include/services/: image_manager.h  wallpaper_manager.h
include/ui/: about_window.h  app_bar_window.h  home_window.h  settings_window.h
include/ui/alerts/: info_bar_message.h  mesage.h
include/ui/indicators/: app_indicator_impression.h
include/utils/: directory_path.h  file_type.h  log.h  settings.h  system_info.h
include/utils/localization/: i_localization.h  localization_manager.h
snap/: snapcraft.yaml
src/: main.cpp  wallpaperengine.cpp  wallpapermanager.cpp
src/assets/: style.css
src/core/: wallpaper_manager.cpp
src/data/application/: app.desktop
src/data/locales/: config.json  data.json  de-DE.json  en-US.json  es-ES.json  fr-FR.json  tr-TR.json
src/data/others/: wallppibAppDesk.desktop  wallppibAppDeskThumbnail.desktop
src/domain/: image_info.cpp
src/include/: About.h  Appbar.h  DirectoryPath.h  Explore.h  ImageInfo.h  Images.h  Log.h  WallpaperEngine.h  Windowsize.h
src/include/common/: WindowSize.h
src/include/images/: Image.h  ImageManager.h
src/include/localization/: ILocalization.h  LocalizationManager.h
src/include/settings/: Settings.h
src/include/views/: AboutView.h  AppbarView.h  ExploreView.h  SettingsView.h  ToastMessageView.h
src/include/wallpaper/: WallpaperManager.h
src/localbuild/: wallppib
src/services/: image_manager.cpp  wallpaper_manager.cpp
src/ui/: about_window.cpp  app_bar_window.cpp  home_window.cpp  settings_window.cpp
src/ui/alerts/: info_bar_message.cpp  message.cpp
src/ui/indicators/: app_indicator_impression.cpp
src/utils/: directory_path.cpp  file_type.cpp  log.cpp  settings.cpp  system_info.cpp
src/utils/localization/: localization_manager.cpp
